k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-api
  labels:
    name: ecommerce-ap
